fix style and overflow

--- a/src/index.css
+++ b/src/index.css
@@ -14,15 +14,8 @@
   min-height: 400vh;
 }
 
-html {
-  padding: 0;
-  margin: 0;
-}
-
 section {
-  min-height: 100vh;
-  height: 100%;
-  width: 100vw;
+  height: auto;
 }
 
 a {
@@ -34,13 +27,15 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+body,
+html {
   margin: 0;
   display: flex;
-  place-items: center;
   font: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.6;
   color: #222222;
+  width: 100%;
+  max-width: 100vw;
 }
 
 h1 {
@@ -62,7 +57,7 @@ h4 {
 }
 
 h5 {
-  font-size: 1.44rem;
+  font-size: clamp(1rem, 5vw, 1.44rem);
 }
 
 p {
