--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -23,7 +23,7 @@
 }
 
 .perspective-intro > span {
-  font-size: clamp(2.9rem, 5vw, 3.5rem);
+  font-size: clamp(1.8rem, 5vw, 3.5rem);
 }
 
 .perspective-intro {
