--- a/src/styles/planning.css
+++ b/src/styles/planning.css
@@ -4,6 +4,7 @@
   position: relative;
   align-items: center;
   margin-top: 10rem;
+  height: 100vh;
 }
 
 .outer-mask,
